Update API to 1.4.0
