# kaggle/models/__init__.py
@@ -36,4 +36,5 @@ from kaggle.models.dataset_new_request import DatasetNewRequest
 from kaggle.models.dataset_new_version_request import DatasetNewVersionRequest
 from kaggle.models.dataset_upload_file import DatasetUploadFile
 from kaggle.models.error import Error
+from kaggle.models.kernel_push_request import KernelPushRequest
 from kaggle.models.result import Result
